# sqlx-d1

./: Cargo.toml  README.md
.github/workflows/: AutoApprove.yml  CI.yml  Publish.yml  auto-approve.yml  publish.yml
sandbox/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  wrangler.jsonc.sample  wrangler.toml.sample
sandbox/.sqlx/: query-12e3cf52a2ab316125ab69fc7e48c4830eddd6528baa2df39fb89e4fab721b62.json  query-1bbf7b73532588095af77e4048600b22adae6322b689f411c2f61857cd31080d.json  query-2c09101e04535990d814f8715a8a3059be085635723806d756adc5c3668d0e10.json  query-59d29ed68e96ae84e4b056b50a423090c024f05abc8b71aecd86dbce04b3a437.json  query-ab5cfd41227d29376371753eb9534059cd5a46489474a278a1d29e13b6d4bed4.json  query-b4f7984e51226de5048976c2cd5d22835d41e0f88e4b4bd1b79c3338ce35a850.json  query-b51152ce25603debb958b25283ba2cd652877c0ed3dbcdda70d6c4e99791be23.json  query-cfff6e51f6e084b0622296100d6bfac02dd657516090cd04729ef99fc60a55ac.json  query-d978f9688767394141d07a7e60fa2adc652cc9b289a727e3b653f2bedbf0529b.json  query-e30549529b0c017afe4db09df3976e4ecb31b36940cfeca51a1241bb5050f054.json  query-eef45e68b8cb19fee82833cb1bb30943aa66f2370b3a8977d3d98ae9f53bbcab.json  query-f3b00babdbb3d5bc3c8d764eed3a1c66d13af04f1e007de5163b924f70eeb1e1.json
sandbox/migrations/: 0001_schema.sql  0002_add_users_uuid.sql
sandbox/src/: issue_51.rs  lib.rs  readme_sample.rs
sandbox/tmp/: query-860480fb7482f353db111ece51a21e4025086ad7d926b0639522a1e481b86b5a.json
sqlx-d1/: Cargo.toml
sqlx-d1-core/: Cargo.toml
sqlx-d1-core/src/: arguments.rs  column.rs  connection.rs  error.rs  lib.rs  macros.rs  row.rs  statement.rs  transaction.rs  type_info.rs  types.rs  value.rs
sqlx-d1-macros/: Cargo.toml
sqlx-d1-macros/src/: input.rs  lib.rs  output.rs
sqlx-d1-macros/src/from_row/: attributes.rs  mod.rs
sqlx-d1-macros/src/query/: input.rs  mod.rs  output.rs
sqlx-d1-sandbox/: Cargo.toml
sqlx-d1-sandbox/src/: lib.rs
sqlx-d1/src/: arguments.rs  column.rs  connection.rs  error.rs  lib.rs  macros.rs  query_result.rs  row.rs  statement.rs  transaction.rs  type_info.rs  types.rs  value.rs
src/: arguments.rs  column.rs  connection.rs  error.rs  lib.rs  row.rs  statement.rs  type_info.rs  types.rs  value.rs
