[package]
name          = "sqlx-d1"
version       = "0.1.0"
edition       = "2024"
authors       = ["kanarus <kanarus786@gmail.com>"]
documentation = "https://docs.rs/sqlx-d1"
homepage      = "https://crates.io/crates/sqlx-d1"
repository    = "https://github.com/ohkami-rs/sqlx-d1"
readme        = "README.md"
license       = "MIT"
description   = "SQLx for Cloudflare D1."
keywords      = ["cloudflare", "d1", "sqlx", "database", "db"]
categories    = ["database", "asynchronous", "wasm", "rust-patterns", "network-programming"]

[dependencies]
# core dependencies
sqlx-core = "0.8"
log       = "0.4" # required for `sqlx_core::connection::ConnectOptions`
worker    = { version = "0.5", features = ["d1"] }

# optional dependencies
serde  = { optional = true, version = "1.0" }
chrono = { optional = true, version = "0.4", default-features = false, features = ["std", "wasmbind"] }
time   = { optional = true, version = "0.3" }
uuid   = { optional = true, version = "1.14" }

[features]
json   = ["sqlx-core/json",   "dep:serde"]
chrono = ["sqlx-core/chrono", "dep:chrono"]
time   = ["sqlx-core/time",   "dep:time"]
uuid   = ["sqlx-core/uuid",   "dep:uuid"]

# DEBUG
default = ["json", "chrono", "time", "uuid"]
