[package]
name          = "sqlx-d1-macros"
documentation = "https://docs.rs/sqlx-d1-macros"
description   = "proc macros for sqlx-d1 - SQLx for Cloudflare D1"
version       = { workspace = true }
edition       = { workspace = true }
authors       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
readme        = { workspace = true }
keywords      = { workspace = true }
categories    = { workspace = true }
license       = { workspace = true }

[lib]
proc-macro = true

[dependencies]
sqlx-macros-core = { version = "=0.8.3", features = ["macros", "sqlite"] }
sqlx-sqlite      = { version = "=0.8.3", features = ["offline"] }
syn              = { version = "2.0", features = ["full"] }
proc-macro2      = "1.0"
quote            = "1.0"
serde            = "1.0"
serde_json       = "1.0"
