[package]
name          = "sqlx-d1-macros"
documentation = "https://docs.rs/sqlx-d1-macros"
description   = "proc macros for sqlx-d1 - SQLx for Cloudflare D1"
version       = { workspace = true }
edition       = { workspace = true }
authors       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
readme        = { workspace = true }
keywords      = { workspace = true }
categories    = { workspace = true }
license       = { workspace = true }

[package.metadata.docs.rs]
features = ["derive", "query"]

[lib]
proc-macro = true

[features]
DEBUG  = []
derive = ["dep:heck"]
query  = ["dep:sha2", "dep:hex", "dep:futures-lite", "sqlx-d1-core/offline"]

[dependencies]
sqlx-d1-core     = { path = "../sqlx-d1-core", version = "=0.2.0" }
sqlx-core        = { version = "=0.8.3" }
sqlx-macros-core = { version = "=0.8.3", features = ["macros"]}
syn              = { version = "2.0", features = ["full"] }
proc-macro2      = { version = "1.0" }
quote            = { version = "1.0" }
serde            = { version = "1.0", features = ["derive"] }
serde_json       = { version = "1.0" }
heck             = { optional = true, version = "0.5" }
sha2             = { optional = true, version = "0.10" }
hex              = { optional = true, version = "0.4" }
futures-lite     = { optional = true, version = "2.6", features = ["std"], default-features = false }
