[package]
name    = "ohkami_worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "s"

[dependencies]
console_error_panic_hook = "0.1"
worker = { version = "0.5" }
sqlx = { version = "0.8" }
sqlx-d1 = { path = "../sqlx-d1" }

[dependencies.ohkami]
git = "https://github.com/ohkami-rs/ohkami"
branch = "v0.24"
features = ["rt_worker"]
