[package]
name          = "sqlx-d1"
documentation = "https://docs.rs/sqlx-d1"
description   = "SQLx for Cloudflare D1"
version       = { workspace = true }
edition       = { workspace = true }
authors       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
readme        = { workspace = true }
keywords      = { workspace = true }
categories    = { workspace = true }
license       = { workspace = true }

[package.metadata.docs.rs]
features = ["json", "uuid", "chrono", "macros"]

[dependencies]
sqlx-d1-core   = { path = "../sqlx-d1-core",   version = "=0.1.4" }
sqlx-d1-macros = { path = "../sqlx-d1-macros", version = "=0.1.4", optional = true }

[features]
json   = ["sqlx-d1-core/json"]
uuid   = ["sqlx-d1-core/uuid"]
chrono = ["sqlx-d1-core/chrono"]

macros = ["query", "derive"]
query  = ["dep:sqlx-d1-macros", "sqlx-d1-macros/query"]
derive = ["dep:sqlx-d1-macros", "sqlx-d1-macros/derive"]

################################
DEBUG = ["sqlx-d1-core/DEBUG", "sqlx-d1-macros?/DEBUG"]
#default = [
#    "json",
#    "uuid",
#    "chrono",
#    "macros",
#    "DEBUG",
#]
################################

[dev-dependencies]
worker = { version = "0.5", features = ["d1"] }
serde  = { version = "1.0", features = ["derive"] }
